# mailcon

./: .gitignore  Makefile  README.md  docker-compose.yaml
config/: Makefile  README.md  configure  setup.cfg
config/mct/: __init__.py  cli.py  version.py
config/tf/: main.tf  terraform.tfstate  terraform.tfstate.backup
images/: README.md
mailcon/: Dockerfile  bashrc  entrypoint  profile  vimrc
mailcon/src/: Makefile  README.md  setup.cfg
mailcon/src/mct/: cli.py
src/: Makefile  pyproject.toml  setup.cfg
src/mct/: __init__.py  __main__.py  cli.py
src/mct.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
