[metadata]
name = mct
version = attr: mct.version.__version__
description =  Mailserver Console Toolkit
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False    
include_package_data = True
# start-modules
install_requires =
  arrow
  click

[options.extras_require]
test =  
  pytest
  pytest-click

# end-modules

[options.package_data]
* =
  VERSION
  LICENSE

[options.entry_points]
console_scripts = 
  mct = mct.cli:mct
